--- a/newf.css
+++ b/newf.css
@@ -47,6 +47,8 @@ input[type=text]:focus, input[type=password]:focus,input[type=radio]:focus,input
   table{
     background-origin: padding-box;
     padding-left: 10px;
+    margin: 5px;
+    border: 3px;
   }
 
 
